DSSSM-366 #time 4m fixed spacing and alignment among all icons/links in authentication window to be equal after reordering of icons/links

--- a/css/dss_digital.css
+++ b/css/dss_digital.css
@@ -986,6 +986,19 @@ body > div#islandora-openseadragon > form > #openseadragon-size-transform-contai
 	margin-right:1%;
 }
 
+/* ensure equal spacing and proper alignment among icons/links in authentication window */
+
+.hybridauth-widget-wrapper > h3 {
+    
+    display:none;
+}
+
+#block-hybridauth-hybridauth {
+	
+	margin-top:1px;
+	margin-left:1px;
+}
+
 
 
 
